fix spacing issues

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -2,8 +2,6 @@
 html,
 body {
 	height: 100%;
-}
-body {
 	margin: 0;
 	font-family: Roboto, "Helvetica Neue", sans-serif;
 }
